fixed long uri not properly wrapped on steam browser

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,4 +14,5 @@ body {
 
 .card-body {
     padding-top: 0px;
+    max-width: 100%;
 }
